@startuml layerforge.domain.shapes
!pragma useIntermediatePackages false

class layerforge.domain.shapes.arrow.Arrow {
}
class layerforge.domain.shapes.circle.Circle {
}
class layerforge.domain.shapes.square.Square {
}
class layerforge.domain.shapes.triangle.Triangle {
}
abstract class layerforge.domain.shapes.base_shape.BaseShape {
  x: float
  y: float
  size: float
}
layerforge.domain.shapes.base_shape.BaseShape <|-- layerforge.domain.shapes.arrow.Arrow
layerforge.domain.shapes.base_shape.BaseShape <|-- layerforge.domain.shapes.circle.Circle
layerforge.domain.shapes.base_shape.BaseShape <|-- layerforge.domain.shapes.square.Square
layerforge.domain.shapes.base_shape.BaseShape <|-- layerforge.domain.shapes.triangle.Triangle
footer Generated by //py2puml//
@enduml